--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
+    "antd": "^2.12.3",
+    "biu.js": "^1.2.0",
     "bootstrap": "^4.0.0-alpha",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "normalize.css": "^7.0.0",
     "object-assign": "^4.1.1",
     "promise": "^7.1.1",
     "prop-types": "^15.5.10",
+    "ramda": "^0.24.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -79,6 +83,7 @@
     "mocha": "^3.2.0",
     "node-sass": "^4.5.3",
     "phantomjs-prebuilt": "^2.1.14",
+    "postcss-loader": "^2.0.6",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
     "rimraf": "^2.6.1",
